Added: Spring Security Form Login.

--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -27,6 +27,8 @@
         </div>
         <br>
     </div>
+
+    <button type="button" class="btn btn-secondary" onclick="location.href='/logout'"></button>
 </div>
 
 <script src="/js/article.js"></script>
