--- a/src/main/resources/templates/articleList.html
+++ b/src/main/resources/templates/articleList.html
@@ -31,5 +31,6 @@
     <button type="button" class="btn btn-secondary" onclick="location.href='/logout'"></button>
 </div>
 
+<script src="/js/token.js"></script>
 <script src="/js/article.js"></script>
 </body>
